Fixed gap in news block, added different background-colors for small buttons and created Contacts page with module blocks

--- a/style/modules/_header.scss
+++ b/style/modules/_header.scss
@@ -39,9 +39,11 @@
     color: #fff;
 
     border-radius: 6px;
-    width: 131px;
-    height: 41px;
+    // width: 131px;
+    // height: 41px;
     background: #fa9021;
+    padding: 10px 27px;
+
 
     &:hover{
       cursor: pointer;
