--- a/style/news/_news.scss
+++ b/style/news/_news.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     column-gap: 72px;
+    justify-content: space-between;
 
     &__main {
         display: flex;
@@ -150,16 +151,38 @@
         color: #fff;
 
         cursor: pointer;
+
+        &[data-background='blue']{
+            background-color: #2351F5;
+        }
+
+        
+        &[data-background='orange']{
+            background-color: #FF7C32;
+        }
+
+        
+        &[data-background='green']{
+            background-color: #23A54F;
+        }
+
+        
+        &[data-background='violet']{
+            background-color: #9921C3;
+        }
     }
 
-    ;
-
+    // &__btn--small[data-background='blue']{
+    //         background-color: #2351F5;
+    // }
     &__timer--small {
         font-weight: 400;
         font-size: 14px;
         line-height: 187%;
         color: #fff;
-    };
+    }
+
+    ;
 
     &__subtitle--small {
         width: 392px;
